# huggingface-tokenizers-kmp

./: .gitmodules  Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
apigen/: Cargo.toml
apigen/src/: lib.rs
buildSrc/src/main/kotlin/: CargoCompile.kt  DefFileTask.kt  Library.kt  Target.kt
gradle/: libs.versions.toml
src/androidInstrumentedTest/kotlin/tokenizers/: TokenizerTest.kt
src/androidMain/kotlin/tokenizers/: Platform.android.kt
src/appleTest/kotlin/: Http.apple.kt
src/commonMain/kotlin/: Encoding.kt  Tokenizer.kt
src/commonMain/kotlin/tokenizers/: DelegatedList.kt  Encoding.kt  Tokenizer.kt
src/commonTest/kotlin/: Constant.kt  EncodingTest.kt  Http.kt  InitializationTest.kt
src/jvmCommonMain/kotlin/: Encoding.jvm.kt  Lib.kt  NativeBridge.kt  Platform.kt  Tokenizer.jvm.kt
src/jvmCommonMain/kotlin/tokenizers/: Encoding.jvm.kt  Lib.kt  NativeBridge.kt  Platform.kt  Tokenizer.jvm.kt
src/jvmCommonTest/kotlin/: Http.jvm.kt
src/jvmMain/kotlin/: Platform.jvm.kt
src/jvmMain/kotlin/tokenizers/: Platform.jvm.kt
src/nativeInterop/cinterop/: lib.def
src/nativeMain/kotlin/: Constant.kt  Encoding.native.kt  Tokenizer.native.kt  UseC.kt
src/nativeMain/kotlin/tokenizers/: Constant.kt  Encoding.native.kt  ReadResult.kt  Tokenizer.native.kt  UseC.kt
src/nativeTest/kotlin/: LeakTest.kt
src/rustMain/: bridge.rs  capi.rs  japi.rs  lib.rs
