[package]
name = "hgtk-rs"
version = "0.1.0"
authors = ["Steve Reed <zhufuzhufu1@gmail.com>"]
edition = "2021"

[lib]
name = "hgtk"
crate-type = ["staticlib", "cdylib"]
path = "src/rustMain/lib.rs"

[dependencies]
jni = "0.21.1"
tokenizers = { version = "0.21.1", default-features = false, features = ["http", "esaxx_fast", "fancy-regex"] }

[patch.crates-io]
tokenizers = { path = "./tokenizers/tokenizers" }
